--- a/et4.org
+++ b/et4.org
@@ -2,244 +2,6 @@
 #+title: ET 框架学习笔记（四）－－框架总结【爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！爱表哥，爱生活！！！】【活宝妹坐等亲爱的表哥，领娶活宝妹回家！爱表哥，爱生活！！！】
 #+author: deepwaterooo 
 
-* IMHandler 接口实现的各种类型消息处理器：需要先理解透彻ETTask 和 ETVoid 
-- ET7 框架里，不知道破框架的开发者出于什么原因，都精减到像没穿衣服一样删除得光秃秃的。。。想搜什么都搜不出来。
-- 可以回去参考前一个游戏参考过的ET-EUI 里有一部分ETVoid 的相关使用，可以用作自己理解 ETTask ETVoid 的源码参考。ET-EUI 现笔记本里没有，可以拉一个下来。
-- 现ET7 里一个ETVoid 的使用也搜不出来。。。框架的开发者发疯了。。。感觉它故意精减压缩，是想要故意挫败打垮别人，
-- 可是真正的程序员开发者，是永远不怕困难的开发者。爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！
-** IMHandler: interface 消息处理器接口类。它有2 个实现抽象类：AMHandler，AMRpcHandler
-- 实现这个接口类型主要分为两个抽象类：AMHandler，AMRpcHandler
-- 今天上午暂时只看取了这个接口，和两个抽象方法这里。后面任何的个体实现类，都还没有细看，不太懂。
-#+BEGIN_SRC csharp
-public interface IMHandler {
-    // 下面，返回类型不对
-    void Handle(Session session, object message); // 这里返回类型，仍然应该是ETTask, 或者可能的 ETVoid ？
-    // 消息处理器帮助类，在程序域加载的时候，会自动扫描程序域里的ActorMessageHander 标签，会想要拿消息的【发送类型】与消息的【返回类型】，来系统化管理消息处理 
-    Type GetMessageType();
-    Type GetResponseType();// 这里现在想的话，可能存在的问题是：有些消息不带返回类型，那么就是说，那类消息不需要处理吗？它只是不需要返回消息，还是会被通知到的 
-}
-#+END_SRC
-** IMActorHandler: 【仅作参考】大概参考 ET-EUI 来的，它的目的应该是把最基类的接口，与其它两类的接口相区分开来
-- 大概参考 ET-EUI 来的，它的目的应该是把最基类的接口，与其它两类的接口相区分开来。但是，我想、猜测、理解的话，应该是上面一个接口，如果能够把ETTask 与ETVoid 狠好地统一的话，应该一个接口可能可以足以整个框架使用的。
-- 消息处理器：基本可以理解为，总都是【服务端】的消息处理器。【客户端】更多的是发请求消息，和接收消息。客户端狠少涉及什么消息处理。
-- 下面的接口，哪个例子也没有参照，自己改的。极有可能都是错的
-#+BEGIN_SRC csharp
-public interface IMActorHandler {
-    // 下面，参考的是ET-EUI 可能是 6.0 版本。ET7 里，可能接口还可以简化，还是Actor 消息机制模块简化了，不一定如下面这样
-    void Handle(Entity entity, int fromProcess, object actorMessage);
-    // ETTask Handle(Entity entity, object actorMessage, Action<IActorResponse> reply);
-    Type GetRequestType();
-    Type GetResponseType();
-}
-#+END_SRC
-** AMHandler<Message>: abstract 抽象基类：两个方法的返回类型，成为现在全框架的理解与实现难点
-- AMHandler类，这个类相比AMRpcHandler更加简单一些，因为这个类型的处理，不需要关心回消息
-- 实现了接口IMHandler的Handle异步方法，具体逻辑为：
-  - 将传进来的msg首先转换为模板类，在AMHandler类里面为Message，具体应该为实现AMHandler的类的具体数据类。
-  - 根据数据类，以及session生成一些报错日志，方便调试
-  - 调用Run方法，将session及具体的数据类传进去
-  - 实际继承抽象类AMHandler的类型，会实现这个接口，从而走向各自的处理。
-   #+BEGIN_SRC csharp
-public abstract class AMHandler<Message>: IMHandler where Message : class {
-
-// 虽然我这么改，可以暂时消掉编译错误。但改得不对，现在消掉了编译错误，等编译通过，运行时错误会一再崩出来的。。。
-    protected abstract void Run(Session session, Message message); 
-    // protected abstract ETTask Run(Session session, Message message);
-
-    // public async ETVoid Handle(Session session, object msg)// 【参考来源：】ET-EUI, 返回类型ETVoid 应该更合适，因为可以异步等待空void 返回类型，不受限
-    public void Handle(Session session, object msg) {
-        Message message = msg as Message;
-        if (message == null) {
-            Log.Error($"消息类型转换错误: {msg.GetType().Name} to {typeof (Message).Name}");
-            return;
-        }
-        if (session.IsDisposed) {
-            Log.Error($"session disconnect {msg}");
-            return;
-        }
-        this.Run(session, message);
-        // this.Run(session, message).Coroutine();
-    }
-    public Type GetMessageType() {
-        return typeof (Message);
-    }
-    public Type GetResponseType() {
-        return null;
-    }
-}
-   #+END_SRC
-** AMRpcHandler: 去抓的ET7 框架的源码，可以用来【校正】其它被自己改错的
-- 去抓的ET7 框架的源码，可以用来校正其它被自己改错的类，或是方法定义。
-- 这个类比AMHandler要多传入一个模板类，主要用于处理那些约定好带返回数据的。 *【注意下面，是参考网络上别人的理解】* 。他们同样与活宝妹一样，也是一知半解，狠多地方说得也未必对。
-- 简单解释一下，现在ET协议数据主要分为两个类型，一种是来了消息直接自己处理的，另外一种是来了消息，自己处理完毕后，还需要将一些数据给返回的。【带返回类型，和不带返回类型】的消息。觉得它理解得不对，不适用于这里。因为 Rpc 这里感觉，更多的是说，进程间，或是现在ET7 重构后的不同SceneType 之间，比如注册登录服与网关服间的消息，内网消息等？ Rpc-rpc-rpc...
-- 主要的处理流程与AMHandler大体相同，需要注意的:
-  - 传入的模板类有类型要求，除了是class外，第一个需要是实现IRequest接口，第二个是实现IResponse接口，他们分别对应了传进来的协议数据类型，以及需要返回的协议数据类型。
-  - IRequest类型，具有RpcId，这个id用来标识一个传入协议数据，同时又将它设置到response返回数据中的RpcId中，这样发送数据返回的时候，就能找到那个和他具有相同RpcId传入协议数据，这种关系一对一，从而能进行进一步处理。 *【谁发来的消息，就返回消息给谁——发送者】*
-  - _回调函数Reply（），即当处理完传入数据后，需要马上装配好返回数据，并将其发送回去，所以需要一个回调函数将response，通过session发送回去._ 前面说的是以前的框架。现在的回调过程，直接通过Session 会话框走网络层将消息发回去，不用再弄个Action<T> 来触发调用回调了。
-  - 在Run中，需要传输上下文session，接受的协议数据request，需要返回的协议数据response，以及回调函数reply
-#+BEGIN_SRC csharp
-public abstract class AMRpcHandler<Request, Response>: IMHandler where Request : class, IRequest where Response : class, IResponse {
-    protected abstract ETTask Run(Session session, Request request, Response response);
-// 看一下：这个返回类型void 算怎么回事？如果这个可以运行通，可以用作参照，来修改其它、另一个上一个不带返回消息的抽象类
-    public void Handle(Session session, object message) { 
-        HandleAsync(session, message).Coroutine();
-    }
-    private async ETTask HandleAsync(Session session, object message) {
-        try {
-            Request request = message as Request;
-            if (request == null) 
-                throw new Exception($"消息类型转换错误: {message.GetType().Name} to {typeof (Request).Name}");
-            int rpcId = request.RpcId;
-            long instanceId = session.InstanceId;
-            Response response = Activator.CreateInstance<Response>();
-            try { // 不懂：下面一句是在干什么，执行对发送来消息的处理，写返回数据？
-                await this.Run(session, request, response);
-            }
-            catch (Exception exception) { // 如果出异常：写异常结果
-                Log.Error(exception);
-                response.Error = ErrorCore.ERR_RpcFail;
-                response.Message = exception.ToString();
-            }
-            // 等回调回来,session可以已经断开了,所以需要判断session InstanceId是否一样
-            if (session.InstanceId != instanceId) 
-                return;
-            response.RpcId = rpcId; // 在这里设置rpcId是为了防止在Run中不小心修改rpcId字段。【谁发来的消息，就返回消息给谁——发送者】
-            session.Send(response); // 把返回消息发回去
-        }
-        catch (Exception e) { // 捕获异步操作过程中的异常
-            throw new Exception($"解释消息失败: {message.GetType().FullName}", e);
-        }
-    }
-    public Type GetMessageType() {
-        return typeof (Request);
-    }
-    public Type GetResponseType() {
-        return typeof (Response);
-    }
-}    
-#+END_SRC
-** AMActorLocationHandler: 源码被我改动了
-- 源码被我改动了，正确性与否没有关系，主要是帮助自己梳理一下几大不同的类型，到改编译错误的时候，能够边修改边弄明白。
-   #+BEGIN_SRC csharp
-[EnableClass]
-public abstract class AMActorLocationHandler<E, Message>: IMActorHandler where E : Entity where Message : class, IActorLocationMessage {
-    // protected abstract ETTask Run(E entity, Message message);
-    protected abstract void Run(E entity, Message message);
-    // public async ETTask Handle(Entity entity, int fromProcess, object actorMessage) {
-    public void Handle(Entity entity, int fromProcess, object actorMessage) {
-        if (actorMessage is not Message message) {
-            Log.Error($"消息类型转换错误: {actorMessage.GetType().FullName} to {typeof (Message).Name}");
-            return;
-        }
-        if (entity is not E e) {
-            Log.Error($"Actor类型转换错误: {entity.GetType().Name} to {typeof (E).Name} --{typeof (Message).Name}");
-            return;
-        }
-        ActorResponse response = new() {RpcId = message.RpcId};
-        ActorHandleHelper.Reply(fromProcess, response);
-        // await this.Run(e, message);
-        this.Run(e, message);
-    }
-    public Type GetRequestType() {
-        return typeof (Message);
-    }
-    public Type GetResponseType() {
-        return typeof (ActorResponse);
-    }
-}
-   #+END_SRC
-** AMActorLocationRpcHandler: 上面接口实现类的一个使用例子。我把返回参数改了 
-#+BEGIN_SRC csharp
-[EnableClass]
-public abstract class AMActorLocationRpcHandler<E, Request, Response>: IMActorHandler where E : Entity where Request : class, IActorLocationRequest where Response : class, IActorLocationResponse {
-    // protected abstract ETTask Run(E unit, Request request, Response response);
-    protected abstract void Run(E unit, Request request, Response response);
-    // public async ETTask Handle(Entity entity, int fromProcess, object actorMessage) {
-    public void Handle(Entity entity, int fromProcess, object actorMessage) {
-        try {
-            if (actorMessage is not Request request) {
-                Log.Error($"消息类型转换错误: {actorMessage.GetType().FullName} to {typeof (Request).Name}");
-                return;
-            }
-            if (entity is not E ee) {
-                Log.Error($"Actor类型转换错误: {entity.GetType().Name} to {typeof (E).Name} --{typeof (Request).Name}");
-                return;
-            }
-            int rpcId = request.RpcId;
-            Response response = Activator.CreateInstance<Response>();
-            try {
-                //await this.Run(ee, request, response);
-                this.Run(ee, request, response);
-            }
-            catch (Exception exception) {
-                Log.Error(exception);
-                response.Error = ErrorCore.ERR_RpcFail;
-                response.Message = exception.ToString();
-            }
-            response.RpcId = rpcId;
-            ActorHandleHelper.Reply(fromProcess, response);
-        }
-        catch (Exception e) {
-            throw new Exception($"解释消息失败: {actorMessage.GetType().FullName}", e);
-        }
-    }
-    public Type GetRequestType() {
-        return typeof (Request);
-    }
-    public Type GetResponseType() {
-        return typeof (Response);
-    }
-    // 这里涉及的就是那个接口方法的定义
-    public ETTask Handle(Entity entity, object actorMessage, Action<IActorResponse> reply) => throw new NotImplementedException();
-}
-#+END_SRC
-** AMActorLocationRpcHandler: Rpc 就是进程间消息（或是ET7 重构为SceneType 之后的多核间消息）
-   #+BEGIN_SRC csharp
-[EnableClass]
-public abstract class AMActorLocationRpcHandler<E, Request, Response>: IMActorHandler where E : Entity where Request : class, IActorLocationRequest where Response : class, IActorLocationResponse {
-    // protected abstract ETTask Run(E unit, Request request, Response response);
-    protected abstract void Run(E unit, Request request, Response response);
-    // public async ETTask Handle(Entity entity, int fromProcess, object actorMessage) {
-    public void Handle(Entity entity, int fromProcess, object actorMessage) {
-        try {
-            if (actorMessage is not Request request) {
-                Log.Error($"消息类型转换错误: {actorMessage.GetType().FullName} to {typeof (Request).Name}");
-                return;
-            }
-            if (entity is not E ee) {
-                Log.Error($"Actor类型转换错误: {entity.GetType().Name} to {typeof (E).Name} --{typeof (Request).Name}");
-                return;
-            }
-            int rpcId = request.RpcId;
-            Response response = Activator.CreateInstance<Response>();
-            try {
-                //await this.Run(ee, request, response);
-                this.Run(ee, request, response);
-            }
-            catch (Exception exception) {
-                Log.Error(exception);
-                response.Error = ErrorCore.ERR_RpcFail;
-                response.Message = exception.ToString();
-            }
-            response.RpcId = rpcId;
-            ActorHandleHelper.Reply(fromProcess, response);
-        }
-        catch (Exception e) {
-            throw new Exception($"解释消息失败: {actorMessage.GetType().FullName}", e);
-        }
-    }
-    public Type GetRequestType() {
-        return typeof (Request);
-    }
-    public Type GetResponseType() {
-        return typeof (Response);
-    }
-}
-   #+END_SRC
-
-** ActorHandleHelper 静态帮助类：包装了必要的方法，帮助自动化回复相关回调消息
-
-
 * Root 客户端根场景管理以及必要的组件：【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
 - 昨天晚上，今天上午把这个根场景下的必要的组件，疑难点大致又看了一遍过了一遍。以后再有什么不懂，或是理解一点儿新的，再添加。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】
 - 把这个客户端的根场景相关的管理组件整理一下。在系统启动起来的时候，公用组件以及客户端组件的时候，分别有添加一些必要的组件。
@@ -420,7 +182,8 @@ public class EntryEvent2_InitServer: AEvent<ET.EventType.EntryEvent2> {
     
 [[./pic/et4_20230604_162732.png]]
 - 把Root 根场景以及启动时添加的组件大致看了一遍。想把上面的消息处理器再系统化地看一遍，理解一下，总改不到这个模块相关的编译错误。
-- 如果上午能够看完，ETTask ETVoid 是必须弄懂的；再然后 ,再看下下面的 UnitGateComponent 相关。下午或傍晚有时间的时候，可以再折腾折腾 emacs-org-mode 下划线删除字体设置为斜体。
+- 今天下午看： *【ETTask ETVoid 是必须弄懂的】* ；看两个小时，像昨天晚上一样真正投入进去看。我相信自己看得懂，弄得透，只是需要投入一点儿时间。所以会把它们弄懂弄透为止。看完了，想下午四点左右快速吃些沙拉，想出去 hiking 两个小时。感觉这段时间还是需要锻炼一下。狠喜欢山林里面比较安静。要是有离 pullman 更近的山林就好了。想骑自行车去，但是感觉难受有点儿大，今天可能还是开车去吧
+- 再然后 ,再看下下面的 UnitGateComponent 相关。下午或傍晚有时间的时候，可以再折腾折腾 emacs-org-mode 下划线删除字体设置为斜体。
 
 - *【UnitGateComponent】* 加个方法用
   - 这里要把 ActorMessageSenderComponent 组件给弄明白。它有个有序管理字典，记着 actorId 与ActorMessageSender 的一一对应关系，就可以封装维护消息的自动发送等，以及必要的超时消息管理。
@@ -528,5 +291,251 @@ public class EntryEvent2_InitServer: AEvent<ET.EventType.EntryEvent2> {
 
 
 
+
+
+
+* IMHandler 接口实现的各种类型消息处理器：需要先理解透彻ETTask 和 ETVoid 
+- ET7 框架里，不知道破框架的开发者出于什么原因，都精减到像没穿衣服一样删除得光秃秃的。。。想搜什么都搜不出来。
+- 可以回去参考前一个游戏参考过的ET-EUI 里有一部分ETVoid 的相关使用，可以用作自己理解 ETTask ETVoid 的源码参考。ET-EUI 现笔记本里没有，可以拉一个下来。
+- 现ET7 里一个ETVoid 的使用也搜不出来。。。框架的开发者发疯了。。。感觉它故意精减压缩，是想要故意挫败打垮别人，
+- 可是真正的程序员开发者，是永远不怕困难的开发者。爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！
+** IMHandler: interface 消息处理器接口类。它有2 个实现抽象类：AMHandler，AMRpcHandler
+- 实现这个接口类型主要分为两个抽象类：AMHandler，AMRpcHandler
+- 今天上午暂时只看取了这个接口，和两个抽象方法这里。后面任何的个体实现类，都还没有细看，不太懂。
+#+BEGIN_SRC csharp
+public interface IMHandler {
+    // 下面，返回类型不对
+    void Handle(Session session, object message); // 这里返回类型，仍然应该是ETTask, 或者可能的 ETVoid ？
+    // 消息处理器帮助类，在程序域加载的时候，会自动扫描程序域里的ActorMessageHander 标签，会想要拿消息的【发送类型】与消息的【返回类型】，来系统化管理消息处理 
+    Type GetMessageType();
+    Type GetResponseType();// 这里现在想的话，可能存在的问题是：有些消息不带返回类型，那么就是说，那类消息不需要处理吗？它只是不需要返回消息，还是会被通知到的 
+}
+#+END_SRC
+** IMActorHandler: 【仅作参考】大概参考 ET-EUI 来的，它的目的应该是把最基类的接口，与其它两类的接口相区分开来
+- 大概参考 ET-EUI 来的，它的目的应该是把最基类的接口，与其它两类的接口相区分开来。但是，我想、猜测、理解的话，应该是上面一个接口，如果能够把ETTask 与ETVoid 狠好地统一的话，应该一个接口可能可以足以整个框架使用的。
+- 消息处理器：基本可以理解为，总都是【服务端】的消息处理器。【客户端】更多的是发请求消息，和接收消息。客户端狠少涉及什么消息处理。
+- 下面的接口，哪个例子也没有参照，自己改的。极有可能都是错的
+#+BEGIN_SRC csharp
+public interface IMActorHandler {
+    // 下面，参考的是ET-EUI 可能是 6.0 版本。ET7 里，可能接口还可以简化，还是Actor 消息机制模块简化了，不一定如下面这样
+    void Handle(Entity entity, int fromProcess, object actorMessage);
+    // ETTask Handle(Entity entity, object actorMessage, Action<IActorResponse> reply);
+    Type GetRequestType();
+    Type GetResponseType();
+}
+#+END_SRC
+** AMHandler<Message>: abstract 抽象基类：两个方法的返回类型，成为现在全框架的理解与实现难点
+- AMHandler类，这个类相比AMRpcHandler更加简单一些，因为这个类型的处理，不需要关心回消息
+- 实现了接口IMHandler的Handle异步方法，具体逻辑为：
+  - 将传进来的msg首先转换为模板类，在AMHandler类里面为Message，具体应该为实现AMHandler的类的具体数据类。
+  - 根据数据类，以及session生成一些报错日志，方便调试
+  - 调用Run方法，将session及具体的数据类传进去
+  - 实际继承抽象类AMHandler的类型，会实现这个接口，从而走向各自的处理。
+   #+BEGIN_SRC csharp
+public abstract class AMHandler<Message>: IMHandler where Message : class {
+
+// 虽然我这么改，可以暂时消掉编译错误。但改得不对，现在消掉了编译错误，等编译通过，运行时错误会一再崩出来的。。。
+    protected abstract void Run(Session session, Message message); 
+    // protected abstract ETTask Run(Session session, Message message);
+
+    // public async ETVoid Handle(Session session, object msg)// 【参考来源：】ET-EUI, 返回类型ETVoid 应该更合适，因为可以异步等待空void 返回类型，不受限
+    public void Handle(Session session, object msg) {
+        Message message = msg as Message;
+        if (message == null) {
+            Log.Error($"消息类型转换错误: {msg.GetType().Name} to {typeof (Message).Name}");
+            return;
+        }
+        if (session.IsDisposed) {
+            Log.Error($"session disconnect {msg}");
+            return;
+        }
+        this.Run(session, message);
+        // this.Run(session, message).Coroutine();
+    }
+    public Type GetMessageType() {
+        return typeof (Message);
+    }
+    public Type GetResponseType() {
+        return null;
+    }
+}
+   #+END_SRC
+** AMRpcHandler: 去抓的ET7 框架的源码，可以用来【校正】其它被自己改错的
+- 去抓的ET7 框架的源码，可以用来校正其它被自己改错的类，或是方法定义。
+- 这个类比AMHandler要多传入一个模板类，主要用于处理那些约定好带返回数据的。 *【注意下面，是参考网络上别人的理解】* 。他们同样与活宝妹一样，也是一知半解，狠多地方说得也未必对。
+- 简单解释一下，现在ET协议数据主要分为两个类型，一种是来了消息直接自己处理的，另外一种是来了消息，自己处理完毕后，还需要将一些数据给返回的。【带返回类型，和不带返回类型】的消息。觉得它理解得不对，不适用于这里。因为 Rpc 这里感觉，更多的是说，进程间，或是现在ET7 重构后的不同SceneType 之间，比如注册登录服与网关服间的消息，内网消息等？ Rpc-rpc-rpc...
+- 主要的处理流程与AMHandler大体相同，需要注意的:
+  - 传入的模板类有类型要求，除了是class外，第一个需要是实现IRequest接口，第二个是实现IResponse接口，他们分别对应了传进来的协议数据类型，以及需要返回的协议数据类型。
+  - IRequest类型，具有RpcId，这个id用来标识一个传入协议数据，同时又将它设置到response返回数据中的RpcId中，这样发送数据返回的时候，就能找到那个和他具有相同RpcId传入协议数据，这种关系一对一，从而能进行进一步处理。 *【谁发来的消息，就返回消息给谁——发送者】*
+  - _回调函数Reply（），即当处理完传入数据后，需要马上装配好返回数据，并将其发送回去，所以需要一个回调函数将response，通过session发送回去._ 前面说的是以前的框架。现在的回调过程，直接通过Session 会话框走网络层将消息发回去，不用再弄个Action<T> 来触发调用回调了。
+  - 在Run中，需要传输上下文session，接受的协议数据request，需要返回的协议数据response，以及回调函数reply
+#+BEGIN_SRC csharp
+public abstract class AMRpcHandler<Request, Response>: IMHandler where Request : class, IRequest where Response : class, IResponse {
+    protected abstract ETTask Run(Session session, Request request, Response response);
+// 看一下：这个返回类型void 算怎么回事？如果这个可以运行通，可以用作参照，来修改其它、另一个上一个不带返回消息的抽象类
+    public void Handle(Session session, object message) { 
+        HandleAsync(session, message).Coroutine();
+    }
+    private async ETTask HandleAsync(Session session, object message) {
+        try {
+            Request request = message as Request;
+            if (request == null) 
+                throw new Exception($"消息类型转换错误: {message.GetType().Name} to {typeof (Request).Name}");
+            int rpcId = request.RpcId;
+            long instanceId = session.InstanceId;
+            Response response = Activator.CreateInstance<Response>();
+            try { // 不懂：下面一句是在干什么，执行对发送来消息的处理，写返回数据？
+                await this.Run(session, request, response);
+            }
+            catch (Exception exception) { // 如果出异常：写异常结果
+                Log.Error(exception);
+                response.Error = ErrorCore.ERR_RpcFail;
+                response.Message = exception.ToString();
+            }
+            // 等回调回来,session可以已经断开了,所以需要判断session InstanceId是否一样
+            if (session.InstanceId != instanceId) 
+                return;
+            response.RpcId = rpcId; // 在这里设置rpcId是为了防止在Run中不小心修改rpcId字段。【谁发来的消息，就返回消息给谁——发送者】
+            session.Send(response); // 把返回消息发回去
+        }
+        catch (Exception e) { // 捕获异步操作过程中的异常
+            throw new Exception($"解释消息失败: {message.GetType().FullName}", e);
+        }
+    }
+    public Type GetMessageType() {
+        return typeof (Request);
+    }
+    public Type GetResponseType() {
+        return typeof (Response);
+    }
+}    
+#+END_SRC
+
+** AMActorLocationHandler: 源码被我改动了
+- 源码被我改动了，正确性与否没有关系，主要是帮助自己梳理一下几大不同的类型，到改编译错误的时候，能够边修改边弄明白。
+   #+BEGIN_SRC csharp
+[EnableClass]
+public abstract class AMActorLocationHandler<E, Message>: IMActorHandler where E : Entity where Message : class, IActorLocationMessage {
+    // protected abstract ETTask Run(E entity, Message message);
+    protected abstract void Run(E entity, Message message);
+    // public async ETTask Handle(Entity entity, int fromProcess, object actorMessage) {
+    public void Handle(Entity entity, int fromProcess, object actorMessage) {
+        if (actorMessage is not Message message) {
+            Log.Error($"消息类型转换错误: {actorMessage.GetType().FullName} to {typeof (Message).Name}");
+            return;
+        }
+        if (entity is not E e) {
+            Log.Error($"Actor类型转换错误: {entity.GetType().Name} to {typeof (E).Name} --{typeof (Message).Name}");
+            return;
+        }
+        ActorResponse response = new() {RpcId = message.RpcId};
+        ActorHandleHelper.Reply(fromProcess, response);
+        // await this.Run(e, message);
+        this.Run(e, message);
+    }
+    public Type GetRequestType() {
+        return typeof (Message);
+    }
+    public Type GetResponseType() {
+        return typeof (ActorResponse);
+    }
+}
+   #+END_SRC
+** AMActorLocationRpcHandler: 上面接口实现类的一个使用例子。我把返回参数改了 
+#+BEGIN_SRC csharp
+[EnableClass]
+public abstract class AMActorLocationRpcHandler<E, Request, Response>: IMActorHandler where E : Entity where Request : class, IActorLocationRequest where Response : class, IActorLocationResponse {
+    // protected abstract ETTask Run(E unit, Request request, Response response);
+    protected abstract void Run(E unit, Request request, Response response);
+    // public async ETTask Handle(Entity entity, int fromProcess, object actorMessage) {
+    public void Handle(Entity entity, int fromProcess, object actorMessage) {
+        try {
+            if (actorMessage is not Request request) {
+                Log.Error($"消息类型转换错误: {actorMessage.GetType().FullName} to {typeof (Request).Name}");
+                return;
+            }
+            if (entity is not E ee) {
+                Log.Error($"Actor类型转换错误: {entity.GetType().Name} to {typeof (E).Name} --{typeof (Request).Name}");
+                return;
+            }
+            int rpcId = request.RpcId;
+            Response response = Activator.CreateInstance<Response>();
+            try {
+                //await this.Run(ee, request, response);
+                this.Run(ee, request, response);
+            }
+            catch (Exception exception) {
+                Log.Error(exception);
+                response.Error = ErrorCore.ERR_RpcFail;
+                response.Message = exception.ToString();
+            }
+            response.RpcId = rpcId;
+            ActorHandleHelper.Reply(fromProcess, response);
+        }
+        catch (Exception e) {
+            throw new Exception($"解释消息失败: {actorMessage.GetType().FullName}", e);
+        }
+    }
+    public Type GetRequestType() {
+        return typeof (Request);
+    }
+    public Type GetResponseType() {
+        return typeof (Response);
+    }
+    // 这里涉及的就是那个接口方法的定义
+    public ETTask Handle(Entity entity, object actorMessage, Action<IActorResponse> reply) => throw new NotImplementedException();
+}
+#+END_SRC
+** AMActorLocationRpcHandler: Rpc 就是进程间消息（或是ET7 重构为SceneType 之后的多核间消息）
+   #+BEGIN_SRC csharp
+[EnableClass]
+public abstract class AMActorLocationRpcHandler<E, Request, Response>: IMActorHandler where E : Entity where Request : class, IActorLocationRequest where Response : class, IActorLocationResponse {
+    // protected abstract ETTask Run(E unit, Request request, Response response);
+    protected abstract void Run(E unit, Request request, Response response);
+    // public async ETTask Handle(Entity entity, int fromProcess, object actorMessage) {
+    public void Handle(Entity entity, int fromProcess, object actorMessage) {
+        try {
+            if (actorMessage is not Request request) {
+                Log.Error($"消息类型转换错误: {actorMessage.GetType().FullName} to {typeof (Request).Name}");
+                return;
+            }
+            if (entity is not E ee) {
+                Log.Error($"Actor类型转换错误: {entity.GetType().Name} to {typeof (E).Name} --{typeof (Request).Name}");
+                return;
+            }
+            int rpcId = request.RpcId;
+            Response response = Activator.CreateInstance<Response>();
+            try {
+                //await this.Run(ee, request, response);
+                this.Run(ee, request, response);
+            }
+            catch (Exception exception) {
+                Log.Error(exception);
+                response.Error = ErrorCore.ERR_RpcFail;
+                response.Message = exception.ToString();
+            }
+            response.RpcId = rpcId;
+            ActorHandleHelper.Reply(fromProcess, response);
+        }
+        catch (Exception e) {
+            throw new Exception($"解释消息失败: {actorMessage.GetType().FullName}", e);
+        }
+    }
+    public Type GetRequestType() {
+        return typeof (Request);
+    }
+    public Type GetResponseType() {
+        return typeof (Response);
+    }
+}
+   #+END_SRC
+** ActorHandleHelper 静态帮助类：包装了必要的方法，帮助自动化回复相关回调消息
+
+** MessageDispatcherComponent: 这些是一个系统的，需要放在一起总结
+#+BEGIN_SRC csharp
+#+END_SRC
+** MessageDispatcherComponentSystem:
+#+BEGIN_SRC csharp
+#+END_SRC
 
 
