--- a/et4.org
+++ b/et4.org
@@ -858,7 +858,7 @@ public class Program {
 #+END_SRC
 - F3Async：既有async也有await (await只有1个)，该方法是使用了Task.Run，我们把它归为计算型的异步方法。
 - 亲爱的表哥，活宝妹今天终于把这个看得稍微有点儿懂了，希望能够赶快从这个ETTask 模块 move-forward. 任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！活宝妹还没能嫁给亲爱的表哥，活宝妹就是永远守候在亲爱的表哥的身边！！！爱表哥，爱生活！！！
-*  现在的修改内容：【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
+*  现在的修改内容：【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】几大版块
 - 【问题】：上次那个ET-EUI 框架的时候，曾经出现过 opcode 不对应，也就是说，我现在生成的进程间消息，有可能还是会存在服务器码与客户端码不对应，这个完备的框架，这次应该不至于吧？
 - 【UIType】部分类：这个类出现在了三四个不同的程序域，现在重构了，好像添加得不对。要再修改
 - *【ET7 框架】* 没有处理的逻辑是： *【ET7 框架里数据库的接入】*
@@ -871,20 +871,18 @@ public class Program {
   - 【服务端】：处理用户请求匹配房间的逻辑. 这里的编译错误终于改完。到时就看运行时错误了。
     - 【数据库模块的整合】：网关服在转发请求匹配时，验证会话框有效后，验证用户身份时，需要去【用户数据库】拿用户数据。ET7 留了个DBManagerComponent, 还没能整合出这个模块
     -【参考来源 *C2R_LoginHandler* 】：Realm 处理客户端的登录请求的服务端逻辑。这里看见，它随机分配一个网关服。也就是，我（原本本质上也是随机分配）一个匹配服给用。可以依照这里的例子来改写。
-- *【服务端的编译错误】* 基本上扫了一遍。【客户端】因为这些前期的工作，以及拖拉机项目重构设计还没有想透彻，暂停一下。
-- 【接下来的内容】： *【重构拖拉机项目】* 。把ET7 框架里【参考项目】的设计看懂，并借助这个例子，把拖拉机项目设计好。
-- 有时间，会试着尽早解决上面 ProtoBuf 里的几个小问题。但现在需要重构的设计思路，客户端的界面等才能够往下进行。 
-    - 【匹配服地址】网关服的处理逻辑里，验证完用户合格后，为代为转发消息到匹配服，但需要拿匹配服的地址。ET7 重构里，还没能改出这部分。服务器系统配置初始化时，可以链表管理各小构匹配服，再去拿相关匹配服的地址。ET7 框架里的路由器系统，自己还没有弄懂。
-    - 这个地方有点儿脑塞，完全搜不到新框架里可以参考的例子，暂时写不到了。那可以去读一读更大的框架，去找别人用ET7 的别人的例子里是怎么写的，再去参考一下别人的。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】今天下午先去看 Tractor 游戏源码，设计重构思路
-- 这些要找的也找不到。下午家里试着把Component 组件再添加回去试试看 *【不能再添加Component 组件。ET7 框架重构了，小单元也走热更新，在热更新层有天文小行星的生成系。可以参照 ET.pdf 里的服务端 PlayerSystem 来作例子】* ？上午把项目设计的思路，源项目的破源码再读一读理一理，是希望游戏逻辑与游戏界面能够快速开发、项目进展往后移的。
+- 【匹配服地址】网关服的处理逻辑里，验证完用户合格后，为代为转发消息到匹配服，但需要拿匹配服的地址。ET7 重构里，还没能改出这部分。服务器系统配置初始化时，可以链表管理各小构匹配服，再去拿相关匹配服的地址。ET7 框架里的路由器系统，自己还没有弄懂。
+- *【热更新层的生成系】* ：下午家里试着把Component 组件再添加回去试试看 *【不能再添加Component 组件。ET7 框架重构了，小单元也走热更新，在热更新层有天文小行星的生成系。可以参照 ET.pdf 里的服务端 PlayerSystem 来作例子】* ？上午把项目设计的思路，源项目的破源码再读一读理一理，是希望游戏逻辑与游戏界面能够快速开发、项目进展往后移的。
+  - *【热更新层的生成系】* ：不少组件，我急着添加热更新层的生成系的时候，可能忽略了某些必要、不必要的Awake() 系统。运行时如果抛错，可以补上必要的Awake() 等必要的框架系统方法。比如：LandlordsGateSessionKeyComponentSystem, 它需要Awake() 系统吗？再列一个报错的例子：C2G_LoginGate_ReqHandler. 【改法】：如果不强改成是单个游戏逻辑，ET 框架里有这个逻辑处理，可以去参考原框架的写法与生成系是如何自动绑定的。
   - User.cs 客户端的话，不知道要不要修改。晚点儿的时候留意一下。
   - Gamer.cs 客户端保留了 Dispose
-- 还有 79 个小错误： protobuf 里还有小问题需要修改。先改了，一次把 Protobuf 里的小错误全部改完了。电脑没好好工作，前后文件不一致。。。。【活宝妹就是一定要嫁给亲爱的表哥！！！】爱表哥，爱生活！！！
-  - *【IScene】* ：不知道哪里崩出来的神龙见首不见尾的，两处，还不知道怎么修改这个编译错误。。。不知道源码是什么原因，弄得乱七八糟，参照原版本的改正一下就可以了，因为现项目里根本就不存在这个的接口类。
-  - 有些文件加了两遍：当我能够从VSC 里删除的时候，却无法从VS 里删除掉索引。找到VS 里可以看见文件的地主，感觉台式机真是慢，让我看见，已经是晚了 800 年了。。。现在找到该如何删除服务端的不必要的文件了，ET7 双端框架服务端的源码是引用的客户端的，所以所有必要的删除文件，都仍然是从客户端的源码里删除掉。
-  - *【IMActorHandler】* ：在 ET7 的框架里，Handle() 方法的定义，主要是Actor 消息机制大概又重构得更为自动化一点儿，就是说大致是说，当有分门别类的ActorMessageHandler 标签系实体类，大概ET7 框架里只需要调用接口的申明方法就可以了？总之，就是Handle() Run() 两大类方法的方法定义发生了变化，但现在还没弄明白本质，为什么在ET7 框架里可以简化，实现简化的原理？
-  - 【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】
-  - *【PlayerComponent 类重复】* ： 狠奇怪：删除了说找不到类，不删除说重复了，感觉台式机应用有延迟？反应狠慢。。。。。文件嵌套想要显示所有嵌套文件的时候，要狠久狠久重启好几次才反应得过来
+- *【IMHandler】* ：在 ET7 的框架里，Handle() 方法的定义，主要是Actor 消息机制大概又重构得更为自动化一点儿，就是说大致是说，当有分门别类的ActorMessageHandler 标签系实体类，大概ET7 框架里只需要调用接口的申明方法就可以了？总之，就是Handle() Run() 两大类方法的方法定义发生了变化，但现在还没弄明白本质，为什么在ET7 框架里可以简化，实现简化的原理？
+  - AMRpcHandler 的实体实现类，我可能还需要再多找几个出来看下
+  - 不知道我刚才笔记本上提交的内容在哪里。今天下午弄这些IMHandler 以及两个抽象实现类，和它们服务端的消息处理器类，编译氏错误一堆，主要是自己这里还有点儿不太懂。
+- *【内存消息等网络相关：请求消息的发送方法等】*
+  - NetInnerComponent NetOuterComponent: 全部移除了？
+- *【ET7 IMHandler 对回复消息的写封装, 与自动回复消息的封装】* ：可能无法处理游戏过程中的某些逻辑。就是涉及到一定顺序，尤其需要先回复消息的处理服处理逻辑。举例：C2G_StartMatch_ReqHandler. 所以，这里要自己好好想透彻一点儿。要如何改，才能适配自己游戏的需求。     
+- *【PlayerComponent 类重复】* ： 狠奇怪：删除了说找不到类，不删除说重复了，感觉台式机应用有延迟？反应狠慢。。。。。文件嵌套想要显示所有嵌套文件的时候，要狠久狠久重启好几次才反应得过来
     - 原本有两个类都是如上面这个类这样，但有时候台式机反应稍快一点儿，就是一个类找不到出现上面的情况。破电脑的延迟反应，弄得我都要怀疑VS 应用被别人操控了。。。
     - 【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
 - 把还没有用到，但是报错了的几个类删掉：比如记一下： SessionInfoComponent,
@@ -897,7 +895,7 @@ public class Program {
   - 这个异步的原理，感觉是弄明白了，今天上午又看了一遍看了会儿。下午去改那些 IMHandler, 希望今天下午能够改彻底。就是真正弄明白了去改（现在的问题就是，几个IMHandler 的实体实现类，改天这个顾不了那个，没弄明白，接口方法怎么申明定义，才能兼顾所有实例类消息处理器？），不是只改掉了当前的编译错误，等真正运行的时候，一个个运行错误或是异常往外冒！！！今天脑袋还算清醒，下午好好弄弄这个
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹，都是一定要嫁给亲爱的表哥的！！！】【三楼上的贱鸡贱畜牲真多！！！一天到底没想点儿好的】活宝妹还没能嫁给亲爱的表哥，活宝妹就是永远守候在亲爱的表哥的身边！！！爱表哥，爱生活！！！
 - 再然后 ,再看下下面的 UnitGateComponent 相关。下午或傍晚有时间的时候，可以再折腾折腾 emacs-org-mode 下划线删除字体设置为斜体。
-- *【UnitGateComponent】* 加个方法用
+- *【UnitGateComponent】* 加个方法用？可能不需要加方法；另一个错是，不能同时成为两个不同 entity 的子控件？【ComponentOf(typeof(Unit))】etc 出错文件在 (C2G_EnterMapHandler)
   - 这里要把 ActorMessageSenderComponent 组件给弄明白。它有个有序管理字典，记着 actorId 与ActorMessageSender 的一一对应关系，就可以封装维护消息的自动发送等，以及必要的超时消息管理。
 - *【服务端Actor_PlayerEnterRoom_ReqHandler 这个处理类】* 现在还很多问题，需要弄懂，往下改
 - 今天晚上会把刚才下午看见、意识到几个模块的问题试着分析明白，记下笔记。    
@@ -927,6 +925,7 @@ public class Program {
 - 【活宝妹坐等亲爱的表哥，领娶活宝妹回家！爱表哥，爱生活！！！】
 - *【亲爱的表哥，这个世界上，只有一个活宝妹，这么心心恋恋，就是一定要嫁给亲爱的表哥！！！问世间情为何物，直教人生死相许。。亲爱的表哥，一个温暖的怀抱拥抱的魂力可真大呀，管了这如许多年！！这不，你的活宝妹为了这个温暖的怀抱拥抱，就是一定要嫁给亲爱的表哥！！不嫁就永远守候在亲爱的表哥的身边！！爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！！】*
 - 亲爱的表哥，活宝妹相信舅舅十岁闯江湖的阅历，活宝妹深深相信亲爱的表哥。活宝妹就是稳稳地永远守候在亲爱的表哥的身边！爱表哥，爱生活！！！活宝妹就是一定要嫁给亲爱的表哥！！
+- 【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】
   
 * TODO 其它的：部分完成，或是待完成的大的功能版块，列举
 - emacs 那天我弄了好久，把C-; ISpell 原定绑定的功能解除，重新绑定为自己喜欢的 expand-region. 今天第二次再弄，看一下几分钟能够解决完问题？我的这个破烂记性呀。。。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】mingw64 lisp/textmode/flyspell.el 键的重新绑定。这下记住了。还好，花得不是太久。有以前的笔记 
@@ -990,11 +989,10 @@ public interface IMHandler {
    #+BEGIN_SRC csharp
 public abstract class AMHandler<Message>: IMHandler where Message : class {
 
+    protected abstract ETTask Run(Session session, Message message); // ET7 原本的
 // 虽然我这么改，可以暂时消掉编译错误。但改得不对，现在消掉了编译错误，等编译通过，运行时错误会一再崩出来的。。。
-    protected abstract void Run(Session session, Message message); 
-    // protected abstract ETTask Run(Session session, Message message);
+    // protected abstract void Run(Session session, Message message); 
 
-    // public async ETVoid Handle(Session session, object msg)// 【参考来源：】ET-EUI, 返回类型ETVoid 应该更合适，因为可以异步等待空void 返回类型，不受限
     public void Handle(Session session, object msg) {
         Message message = msg as Message;
         if (message == null) {
@@ -1005,8 +1003,7 @@ public abstract class AMHandler<Message>: IMHandler where Message : class {
             Log.Error($"session disconnect {msg}");
             return;
         }
-        this.Run(session, message);
-        // this.Run(session, message).Coroutine();
+        this.Run(session, message).Coroutine(); // 同步方法：调用的是异步方法的协程？可以这么写吗》？
     }
     public Type GetMessageType() {
         return typeof (Message);
@@ -1017,6 +1014,7 @@ public abstract class AMHandler<Message>: IMHandler where Message : class {
 }
    #+END_SRC
 ** AMRpcHandler: 去抓的ET7 框架的源码，可以用来【校正】其它被自己改错的
+- 注意，在ET7 框架里，IMHandler 接口，与AMHandler 是定义在Share 双端共用。而AMRpcHandler 是定义在服务器端的，只有服务端存在进程间通信 Rpc 消息？
 - 去抓的ET7 框架的源码，可以用来校正其它被自己改错的类，或是方法定义。
 - 这个类比AMHandler要多传入一个模板类，主要用于处理那些约定好带返回数据的。 *【注意下面，是参考网络上别人的理解】* 。他们同样与活宝妹一样，也是一知半解，狠多地方说得也未必对。
 - 简单解释一下，现在ET协议数据主要分为两个类型，一种是来了消息直接自己处理的，另外一种是来了消息，自己处理完毕后，还需要将一些数据给返回的。【带返回类型，和不带返回类型】的消息。觉得它理解得不对，不适用于这里。因为 Rpc 这里感觉，更多的是说，进程间，或是现在ET7 重构后的不同SceneType 之间，比如注册登录服与网关服间的消息，内网消息等？ Rpc-rpc-rpc...
@@ -1025,10 +1023,11 @@ public abstract class AMHandler<Message>: IMHandler where Message : class {
   - IRequest类型，具有RpcId，这个id用来标识一个传入协议数据，同时又将它设置到response返回数据中的RpcId中，这样发送数据返回的时候，就能找到那个和他具有相同RpcId传入协议数据，这种关系一对一，从而能进行进一步处理。 *【谁发来的消息，就返回消息给谁——发送者】*
   - _回调函数Reply（），即当处理完传入数据后，需要马上装配好返回数据，并将其发送回去，所以需要一个回调函数将response，通过session发送回去._ 前面说的是以前的框架。现在的回调过程，直接通过Session 会话框走网络层将消息发回去，不用再弄个Action<T> 来触发调用回调了。
   - 在Run中，需要传输上下文session，接受的协议数据request，需要返回的协议数据response，以及回调函数reply
+- 亲爱的表哥，活宝妹的小鼠标到了，可是活宝妹的小小手，也感觉这个好小，捏不住，不好用！！！   
 #+BEGIN_SRC csharp
 public abstract class AMRpcHandler<Request, Response>: IMHandler where Request : class, IRequest where Response : class, IResponse {
+// ET7 框架里原本的：
     protected abstract ETTask Run(Session session, Request request, Response response);
-// 看一下：这个返回类型void 算怎么回事？如果这个可以运行通，可以用作参照，来修改其它、另一个上一个不带返回消息的抽象类
     public void Handle(Session session, object message) { 
         HandleAsync(session, message).Coroutine();
     }
@@ -1039,9 +1038,10 @@ public abstract class AMRpcHandler<Request, Response>: IMHandler where Request :
                 throw new Exception($"消息类型转换错误: {message.GetType().Name} to {typeof (Request).Name}");
             int rpcId = request.RpcId;
             long instanceId = session.InstanceId;
-            Response response = Activator.CreateInstance<Response>();
-            try { // 不懂：下面一句是在干什么，执行对发送来消息的处理，写返回数据？
-                await this.Run(session, request, response);
+            Response response = Activator.CreateInstance<Response>(); // 创建一个消息的回复实例
+            try { // 【找个例子看一下，例子在下面】不懂：下面一句是在干什么，执行对发送来消息的处理，写返回数据？这里调的是抽象异步函数。会在具体的实现类里去实现
+// 猜测：应该更多可能是，通过不同服的具体实现，将返回数据写好？【是这样的】因为发送还在后面 session.Send(response) 是发送出去
+                await this.Run(session, request, response); 
             }
             catch (Exception exception) { // 如果出异常：写异常结果
                 Log.Error(exception);
@@ -1052,12 +1052,13 @@ public abstract class AMRpcHandler<Request, Response>: IMHandler where Request :
             if (session.InstanceId != instanceId) 
                 return;
             response.RpcId = rpcId; // 在这里设置rpcId是为了防止在Run中不小心修改rpcId字段。【谁发来的消息，就返回消息给谁——发送者】
-            session.Send(response); // 把返回消息发回去
+            session.Send(response); // 把返回消息发回去，这里才是真正的发返回消息回请求端
         }
         catch (Exception e) { // 捕获异步操作过程中的异常
             throw new Exception($"解释消息失败: {message.GetType().FullName}", e);
         }
     }
+
     public Type GetMessageType() {
         return typeof (Request);
     }
@@ -1066,6 +1067,58 @@ public abstract class AMRpcHandler<Request, Response>: IMHandler where Request :
     }
 }    
 #+END_SRC
+** C2R_LoginHandler: AMRpcHandler 的一个实体类，前后版本封装对比
+- 上面的 AMRpcHandler 抽象方法 Run() 不是看不懂吗，找到一个例子，有前后两个版本的对比，可以参看理解一下
+- 感觉今天下午，终于可以把先前这个自己总感觉迷迷糊糊的各种服的消息处理弄明白了
+- 今天下午，把所有这类各种服的消息处理里的这些问题、编译错误全部改掉。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】  
+#+BEGIN_SRC csharp
+// 框架中原本有这个方法，为什么我需要把它改成下现在的这个样子？
+[MessageHandler(SceneType.Realm)]
+public class C2R_LoginHandler : AMRpcHandler<C2R_Login, R2C_Login> {
+    // 【ET7 的进一步精简封装】：封装在AMRpcHandler 抽象实现类里
+    protected override async ETTask Run(Session session, C2R_Login request, R2C_Login response) {
+        // 随机分配一个Gate
+        StartSceneConfig config = RealmGateAddressHelper.GetGate(session.DomainZone());
+        Log.Debug($"gate address: {MongoHelper.ToJson(config)}");
+			
+        // 向gate请求一个key,客户端可以拿着这个key连接gate
+        G2R_GetLoginKey g2RGetLoginKey = (G2R_GetLoginKey) await ActorMessageSenderComponent.Instance.Call(
+            config.InstanceId, new R2G_GetLoginKey() {Account = request.Account});
+
+        response.Address = config.InnerIPOutPort.ToString();
+        response.Key = g2RGetLoginKey.Key;
+        response.GateId = g2RGetLoginKey.GateId;
+    }
+
+    // 【ET-EUI 版本中的实现】：用来作ET7 重构的对比参照。【下面的方法不要，不再需要】
+    protected override async void Run(Session session, C2R_Login message, Action<R2C_Login> reply) { // 【古老封装：】自己看看就能弄明白，ET7 的进一步精简封装
+        R2C_Login response = new R2C_Login(); // 创建一个回复消息的实例：是因为没有实例，参数只有回调方法函数，所以必须得造一个。。
+        try {
+            // if (message.Account != "abcdef" || message.Password != "111111") // 这里作必要的错误检测
+            // {
+            //    response.Error = ErrorCode.ERR_AccountOrPasswordError;
+            //    reply(response);
+            //    return;
+            // }
+            // 随机分配一个Gate: 这里原理不变
+            StartSceneConfig config = RealmGateAddressHelper.GetGate(session.DomainZone());
+            Log.Debug($"gate address: {MongoHelper.ToJson(config)}");
+            // 向gate请求一个key,客户端可以拿着这个key连接gate
+            G2R_GetLoginKey g2RGetLoginKey = (G2R_GetLoginKey) await ActorMessageSenderComponent.Instance.Call(
+                config.InstanceId, new R2G_GetLoginKey() {Account = message.Account});
+            // 手动：写返回消息的内容
+            response.Address = config.InnerIPOutPort.ToString();
+            response.Key = g2RGetLoginKey.Key;
+            response.GateId = g2RGetLoginKey.GateId;
+            reply(response); // 通过调用回调函数，将回调回调到调用端，就是把写好的消息返回给调用端，供它拿数据接通知等
+        }
+        catch (Exception e) { // 网络异步的过程中，捕获异常
+            ReplyError(response, e, reply);
+        }
+    }
+}
+#+END_SRC
+
 ** IMHandler 【ET-EUI】：主要是与上面对比
 - 因为对于ET-EUI 里，它为什么要再多自定义几个接口，这个版块不够熟悉
 - 我觉得把两个框架的几个接口与抽象实体类提出来对比理解一下是对的，因为没明白，为什么ET7 里会重构成那个样子。可能也网上查下再帮助理解一下。
